utilities/Sol/modules/grammars/option/src/test/resources/cocos/instance/valid/Composite.option
option subOptionsCoCo: List {
    label "A Label"

    option aSubOption: String {
        label "A Label"
        required true
    }
}
