utilities/Sol/modules/grammars/option/src/test/resources/cocos/instance/invalid/Composite.option
option subOptionsCoCo: String {
    label "A Label"

    option aSubOption: String {
        label "A Label"
        required true
    }
}
